--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "test": "test"
   },
   "dependencies": {
+    "async": "^1.5.0",
     "express": "^4.13.3",
+    "lodash": "^3.10.1",
     "request": "^2.65.0",
     "vows": "^0.8.1"
   },
