--- a/package.json
+++ b/package.json
@@ -9,11 +9,18 @@
   "dependencies": {
     "async": "^1.5.0",
     "express": "^4.13.3",
+    "gulp": "^3.9.0",
+    "js-yaml": "^3.4.3",
     "lodash": "^3.10.1",
+    "pm2": "^0.15.10",
     "request": "^2.65.0",
-    "vows": "^0.8.1"
+    "superagent": "^1.4.0",
+    "vows": "^0.8.1",
+    "winston": "^2.1.0"
   },
   "devDependencies": {
+    "babel-preset-es2015": "^6.1.18",
+    "gulp-babel": "^6.1.0",
     "mocha": "^2.3.3"
   },
   "scripts": {
