--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "async": "^1.5.0",
+    "body-parser": "^1.14.1",
     "express": "^4.13.3",
     "gulp": "^3.9.0",
     "js-yaml": "^3.4.3",
@@ -21,7 +22,9 @@
   "devDependencies": {
     "babel-preset-es2015": "^6.1.18",
     "gulp-babel": "^6.1.0",
-    "mocha": "^2.3.3"
+    "mocha": "^2.3.3",
+    "should": "^7.1.1",
+    "supertest": "^1.1.0"
   },
   "scripts": {
     "test": "mocha"
