--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "lodash": "^3.10.1",
     "pm2": "^0.15.10",
     "request": "^2.65.0",
+    "socket.io": "^1.3.7",
     "superagent": "^1.4.0",
     "vows": "^0.8.1",
     "winston": "^2.1.0"
